pagina da atividade 4

--- a/atividade 2/css/style.css
+++ b/atividade 2/css/style.css
@@ -80,7 +80,7 @@ nav ul {
 .listaPlano {
   width: 300px;
   color: #202020;
-  background-color: #EEEEBB;
+  background-color: #eeeebb;
   font-size: 12px;
   padding: 10px 10px 10px 30px;
   border: 3px solid #202020;
@@ -88,7 +88,7 @@ nav ul {
   list-style-type: square;
 }
 
-.listaPlano ul{
+.listaPlano ul {
   list-style-type: square;
 }
 
@@ -96,11 +96,53 @@ h4 {
   font-size: 14px;
 }
 
-.listPlano ol{
+.listPlano ol {
   color: #202020;
   list-style-type: lower-alpha;
 }
 
 .preco {
   color: #cc0000;
+}
+
+/* atividade 4 - Equipamentos */
+
+.tabEquip {
+  border: 1px solid;
+  border-collapse: separate;
+  width: 510px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.tabTitulo {
+  background-color: #402020;
+  color: #ffffff;
+}
+
+.tabSubTit {
+  background-color: #802020 !important;
+  color: #ffffff;
+}
+
+.tabEquip th {
+  border: 1px solid;
+  padding: 10px;
+}
+
+.tabEquip td {
+  border: 1px solid;
+  padding: 10px;
+  font-size: 12px;
+  background-color: #EEEEBB;
+}
+
+.tabEquip .imgCel {
+  width: 100px;
+  background-color: #FFFFFF;
+}
+
+.imgCel img {
+  width: 100px;
+  height: 100px;
 }
